# car-insurance-agent

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  GETTING_STARTED.md  LICENSE  README.md
.github/workflows/: ci.yml  deploy.yml  eval.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: claims_agent.py  policy_qa_agent.py  quote_agent.py  supervisor.py
backend/app/config/: logging.py  settings.py
backend/app/database/: schemas.sql
backend/app/evals/: agent_eval.py  golden_dataset.json  ragas_eval.py
backend/app/services/: premium_calc.py  vehicle_catalog.py
backend/app/tools/: claims_tools.py  quote_tools.py  rag_tools.py
backend/app/workflows/: checkpointer.py  interrupts.py  main_graph.py  state.py
backend/data/knowledge_base/: faqs.md  irdai_guidelines.md  irdai_motor_guidelines.md  policy_terms.md  policy_terms_template.md
backend/scripts/: ingest_kb.py
backend/tests/: test_premium_calc.py
backend/tests/integration/: test_claim_flow.py  test_hitl_interrupt.py  test_quote_flow.py
backend/tests/unit/: test_ncb.py  test_premium_calc.py
deployment/aws/: deploy.sh
deployment/docker/: docker-compose.yml  prometheus.yml
deployment/nginx/: nginx.conf
deployment/systemd/: autoshield.service  setup_ec2.sh
docs/api/: openapi.yaml
frontend/: Dockerfile  index.html  package.json  tailwind.config.ts  tsconfig.json
frontend/static/: app.js  (+1 more)
notebooks/: 04_ragas_evaluation.ipynb
scripts/: eval_run.sh  generate_synthetic_data.py  ingest_kb.py  seed_db.sh
(+16 files in other folders)
